[gd_scene load_steps=5 format=3 uid="uid://cxjb0a1p5aobb"]

[ext_resource type="Script" path="res://scenes/player/buildings/tower_slow.gd" id="1_r5xkp"]
[ext_resource type="Texture2D" uid="uid://caif4qmcep4ov" path="res://scenes/player/buildings/32x32.png" id="2_0lja1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qteo6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sse3e"]
radius = 100.0

[node name="TowerSlow" type="StaticBody2D" groups=["towers"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_r5xkp")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.297776, 0.857397, 0.486322, 1)
texture = ExtResource("2_0lja1")

[node name="Button" type="CheckButton" parent="Sprite2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.5
offset_top = -16.5
offset_right = -16.5
offset_bottom = -16.5
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_qteo6")

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="RangeArea" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_sse3e")

[node name="AttackSpeed" type="Timer" parent="."]
autostart = true

[connection signal="toggled" from="Sprite2D/Button" to="." method="_on_button_toggled"]
[connection signal="body_entered" from="RangeArea" to="." method="_on_range_area_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_range_area_body_exited"]
[connection signal="timeout" from="AttackSpeed" to="." method="_on_attack_speed_timeout"]
